--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -17,12 +17,20 @@
 
 	<dependencies>
 
-		<dependency>
-			<groupId>com.epimorphics.lda</groupId>
-			<artifactId>elda-standalone</artifactId>
-			<version>${project.version}</version>
-			<type>war</type>
-		</dependency>
+    	<dependency>
+    		<groupId>com.epimorphics.lda</groupId>
+    		<artifactId>elda-testing-webapp</artifactId>
+    		<version>${project.version}</version>
+    		<type>war</type>
+    	</dependency>
+
+        <dependency>
+            <groupId>com.hp.hpl.jena</groupId>
+            <artifactId>tdb</artifactId>
+            <version>0.8.9</version>
+            <type>jar</type>
+        </dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -30,6 +38,7 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
@@ -38,6 +47,7 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
+	
 	<version>1.1.9-SNAPSHOT</version>
 	<build>
 
@@ -68,7 +78,7 @@
 						<deployables>
 							<deployable>
 								<groupId>com.epimorphics.lda</groupId>
-								<artifactId>elda-standalone</artifactId>
+								<artifactId>elda-testing-webapp</artifactId>
 								<type>war</type>
 								<properties>
 									<context>elda</context>
