--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <properties>
-    <elda.version>1.1.8-SNAPSHOT</elda.version>
+    <elda.version>1.1.9-SNAPSHOT</elda.version>
     <hg.root>${project.build.directory}</hg.root>
   </properties>
 
@@ -154,5 +154,6 @@
     <module>lda</module>
     <module>deliver-elda</module>
     <module>elda-system-tests</module>
+    <module>elda-testing-webapp</module>
   </modules>
 </project>
