--- a/elda-standalone/pom.xml
+++ b/elda-standalone/pom.xml
@@ -1,96 +1,75 @@
+<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
     <version>1.2.36-SNAPSHOT</version>
   </parent>
-
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda-standalone</artifactId>
   <packaging>war</packaging>
   <name>elda-standalone</name>
   <version>1.2.36-SNAPSHOT</version>
   <description>instant Elda webapp</description>
-
   <dependencies>
-
-
-      <dependency>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>jetty</artifactId>
-        <version>6.1.16</version>
-      </dependency>
-
-
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+      <version>7.0.42</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-logging-log4j</artifactId>
+      <version>7.0.42</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+      <version>7.0.42</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>com.epimorphics.lda</groupId>
       <artifactId>elda-lda</artifactId>
       <version>${project.version}</version>
-  </dependency>
-
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.2</version>
     </dependency>
-  
   </dependencies>
-
   <build>
     <finalName>elda-standalone</finalName>
     <plugins>
-        <plugin>
-            <artifactId>maven-jetty-plugin</artifactId>
-	    <groupId>org.mortbay.jetty</groupId>
-	    <version>6.1.25</version>
-        </plugin>  
-        
-        <!--  assemble the final jar file -->
-        <plugin>
-	        <!-- NOTE: We don't need a groupId specification because the group is
-	             org.apache.maven.plugins ...which is assumed by default.
-	         -->
-	        <artifactId>maven-assembly-plugin</artifactId>
-	        <version>2.2.1</version>
-			<configuration>
-
-	            <descriptors>
-	                <descriptor>src/assemble/distribution.xml</descriptor>
-	            </descriptors>
-				
-				<finalName>elda-standalone-${project.version}</finalName>
-				
-				<appendAssemblyId>false</appendAssemblyId>
-				
-				<archive>
-	                <manifestEntries>
-                        <Main-Class>cmd.run</Main-Class>
-                    </manifestEntries>
-				</archive>
-
-	        </configuration>
-			
-			<executions>
-	            <execution>
-	                <phase>package</phase>
-	                <goals>
-	                    <goal>single</goal>
-	                </goals>
-	            </execution>
-	        </executions>
-        </plugin>
-        
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.6</version>
-          <configuration>
-              <skip>false</skip>
-          </configuration>
-        </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.0</version>
+        <executions>
+          <execution>
+            <id>tomcat-run</id>
+            <goals>
+              <goal>exec-war-only</goal>
+            </goals>
+            <phase>package</phase>
+            <configuration>
+              <path>standalone</path>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
-
 </project>
