--- a/elda-system-tests/pom.xml
+++ b/elda-system-tests/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>elda</artifactId>
     <groupId>com.epimorphics.lda</groupId>
-    <version>1.3.1</version>
+    <version>1.3.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>elda-system-tests</artifactId>
