--- a/elda-testing-webapp/pom.xml
+++ b/elda-testing-webapp/pom.xml
@@ -15,6 +15,47 @@
   <dependencies>
 
     <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+      <version>7.0.42</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-logging-log4j</artifactId>
+      <version>7.0.42</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-jasper</artifactId>
+      <version>7.0.42</version>
+      <scope>provided</scope>
+	</dependency>
+
+	    <dependency>
+		       <groupId>com.sun.jersey.contribs</groupId>
+		        <artifactId>jersey-multipart</artifactId>
+		        <version>1.17</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>commons-beanutils</groupId>
+	        <artifactId>commons-beanutils</artifactId>
+	        <version>1.8.3</version>
+	    </dependency>
+	   <dependency>
+	      <groupId>com.sun.jersey</groupId>
+	      <artifactId>jersey-client</artifactId>
+	      <version>1.17</version>
+	   </dependency>
+																														    <dependency>
+	     <groupId>com.sun.jersey.contribs</groupId>
+	     <artifactId>jersey-apache-client</artifactId>
+	     <version>1.17</version>
+	     <scope>test</scope>
+	   </dependency>
+
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5</version>
