--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,11 @@ elda-standalone/meta-graph.ttl
 elda-standalone/object-graph.ttl
 elda-standalone/velocity.log
 elda-standalone/src/main/webapp/assets
-elda-standalone/velocity.log*
+# elda-standalone/velocity.log*
+
+bin
+
+velocity.log
 
 _site
 .sass-cache
