--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
   <properties>
 	  <tempSCM>/tmp/tempSCM</tempSCM>
-	  <project.tagname> [error pages, Tue 25th Nov]</project.tagname>
+	  <project.tagname> [RC1]</project.tagname>
 
     <ver.junit>4.11</ver.junit>
     <ver.log4j>1.2.17</ver.log4j>
