--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.2</version>
   <packaging>pom</packaging>
   <name>elda</name>
   <description>Top level linked data API project</description>
@@ -13,12 +13,12 @@
     <connection>scm:git:${tempSCM}</connection>
     <developerConnection>scm:git:${tempSCM}</developerConnection>
     <url>scm:git:${tempSCM}</url>
-    <tag>HEAD</tag>
+    <tag>elda-2.0.2</tag>
   </scm>
 
   <properties>
 	  <tempSCM>/tmp/tempSCM</tempSCM>
-	  <project.tagname></project.tagname>
+	  <project.tagname />
 
     <ver.junit>4.11</ver.junit>
     <ver.log4j>1.2.17</ver.log4j>
