--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.epimorphics.lda</groupId>
   <artifactId>elda</artifactId>
-  <version>2.0.3-SNAPSHOT</version>
+  <version>2.0.2</version>
   <packaging>pom</packaging>
   <name>elda</name>
   <description>Top level linked data API project</description>
@@ -13,7 +13,7 @@
     <connection>scm:git:${tempSCM}</connection>
     <developerConnection>scm:git:${tempSCM}</developerConnection>
     <url>scm:git:${tempSCM}</url>
-    <tag>HEAD</tag>
+    <tag>elda-2.0.2</tag>
   </scm>
 
   <properties>
