--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
     <repository>
       <id>epi-public-repo</id>
       <name>Epimorphics Public Repository</name>
-      <url>http://repository.epimorphics.com</url>
+      <url>https://repository.epimorphics.com</url>
       <layout>default</layout>
       <releases>
         <enabled>true</enabled>
@@ -221,7 +221,7 @@
     <repository>
       <id>maven2-repository.dev.java.net</id>
       <name>Java.net Repository for Maven</name>
-      <url>http://download.java.net/maven/2/</url>
+      <url>https://download.java.net/maven/2/</url>
       <layout>default</layout>
     </repository>
 
