--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -54,8 +54,18 @@
           <groupId>org.apache.jena</groupId>
           <artifactId>jena-arq</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+        </exclusion>
       </exclusions>
      </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.6.7.3</version>
+    </dependency>
 
       <dependency>
           <groupId>org.apache.velocity</groupId>
