--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -77,6 +77,12 @@
         <groupId>org.apache.jena</groupId>
         <artifactId>jena-tdb</artifactId>
         <version>0.10.1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+        </exclusions>
     </dependency>
 
     <dependency>
@@ -85,6 +91,12 @@
       <version>2.11.2</version>
       <type>test-jar</type>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
   </dependency>
 
     <dependency>
@@ -93,6 +105,12 @@
       <version>2.11.2</version>
       <type>test-jar</type>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
   </dependency>
 
   <dependency>
@@ -135,6 +153,12 @@
       <groupId>com.epimorphics</groupId>
       <artifactId>lib</artifactId>
       <version>0.1.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.jmock</groupId>
@@ -146,6 +170,24 @@
       <artifactId>mockito-all</artifactId>
       <version>2.0.2-beta</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${ver.log4j}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${ver.log4j}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>${ver.slf4j}</version>
     </dependency>
   </dependencies>
 
