--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -152,7 +152,7 @@
     <dependency>
       <groupId>com.epimorphics</groupId>
       <artifactId>lib</artifactId>
-      <version>0.1.1</version>
+      <version>0.1.6</version>
       <exclusions>
         <exclusion>
           <groupId>log4j</groupId>
@@ -188,6 +188,12 @@
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
       <version>${ver.slf4j}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.33</version>
     </dependency>
   </dependencies>
 
