Update jersey and jettison dependencies * Bump jersey 1.18.2 -> 1.19.4 * Override transitive dependency on org.codehaus.jettison:jettison 1.1 -> 1.5.4

--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -144,6 +144,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.codehaus.jettison</groupId>
+      <artifactId>jettison</artifactId>
+      <version>1.5.4</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.jmock</groupId>
       <artifactId>jmock-junit4</artifactId>
       <version>2.6.0</version>
