--- a/elda-lda/pom.xml
+++ b/elda-lda/pom.xml
@@ -201,6 +201,18 @@
       <artifactId>snakeyaml</artifactId>
       <version>1.33</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.14</version>
+    </dependency>
+
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <version>2.12.0</version>
+    </dependency>
   </dependencies>
 
   <build>
